Added meta description tag to provide

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Cette application de gestion des patients est conçue pour faciliter le travail des professionnels de santé indépendants.">
   <title>Ordopro</title>
   <link rel="icon" href="./images/logo_simple_centre.png">
   <link href="css/style.css" rel="stylesheet">
