:bug: fix URL redirect

--- a/public/index.html
+++ b/public/index.html
@@ -757,7 +757,7 @@
                 </div>
 
                 <a
-                  href="https://www.ordopro.fr/login"
+                  href="https://app.ordopro.fr/login"
                   class="zb uc _e uf lg pg ji ki vi aj pj kk tk"
                 >
                   Choisir cette offre
