:sparkles: Add new page rgpd

--- a/public/index.html
+++ b/public/index.html
@@ -912,11 +912,11 @@
 
             <div class="uc sg am/2 kn/3">
               <div class="bc le ne ue gl dm vn">
-                <a href="javascript:void(0)" class="ki aj">
+                <a href="./politique_de_confidentialite.html" class="ki aj">
                   Politique de confidentialité
                 </a>
-                <a href="javascript:void(0)" class="ki aj">
-                  Conditions générales
+                <a href="./cgv.html" class="ki aj">
+                  Conditions générales de vente
                 </a>
               </div>
             </div>
