refactor(legal): improves terms and conditions and privacy policy
- Enriches T&C content with more details on rates and conditions
- Restructures privacy policy according to RGPD standards
- Removes unused mobile menu
- Updates copyright dates

--- a/public/cgv.html
+++ b/public/cgv.html
@@ -24,26 +24,6 @@
               />
             </a>
           </div>
-          <button
-            class="navbarOpen e i j/2 da bc fc vc be/2 ie le ne pe ui cn"
-            aria-label="navbarOpen"
-            name="navbarOpen"
-          >
-            <span class="zb gc wc uf hk"></span>
-            <span class="zb gc wc uf hk"></span>
-            <span class="zb gc wc uf hk"></span>
-          </button>
-
-          <div class="menu-wrapper f dc oe bn">
-            <button
-              class="navbarClose d k l ea bc fc vc ie le ne ui cn"
-              name="navbarClose"
-              aria-label="navbarClose"
-            >
-              <span class="zb gc wc ce uf hk"></span>
-              <span class="ta zb gc wc de uf hk"></span>
-            </button>
-          </div>
 
           <div class="ua bc le me um">
             <a href="https://ordopro.fr/" class="dc _e vf lg ng ki vi aj qj _k">
@@ -59,98 +39,113 @@
       <section class="sh">
         <div class="wow fadeInUp la bb pd ji" data-wow-delay=".2s">
           <h1 class="_a qi ui _i ok tl im lm">Conditions Générales de Vente</h1>
-          <p class="ki bj">Dernière mise à jour : 14/11/2024</p>
+          <p class="ki bj">Dernière mise à jour : 25/10/2023</p>
 
           <div class="ki bj">
-            <h2 class="_a ni wi _i ok rl lp">
-              1. Identification de l'entreprise
-            </h2>
+            <h2 class="_a ni wi _i ok rl lp">1. Éditeur du service</h2>
             <p>
               <strong>Dénomination :</strong> OrdoPro<br />
-              <strong>Entrepreneur :</strong> Issa DIALLO<br />
-              <strong>Numéro SIREN :</strong> 752 631 127<br />
-              <strong>Code APE :</strong> 82.99Z<br />
-              <strong>Date d'immatriculation :</strong> 14/11/2024<br />
-              <strong>Forme juridique :</strong> Entrepreneur individuel<br />
-              <strong>Adresse :</strong> 461 RTE Blanche, 01170 Ségny, FRANCE
+              <strong>Gérant :</strong> Issa DIALLO<br />
+              <strong>Immatriculation :</strong> SIREN 752 631 127<br />
+              <strong>Adresse :</strong> 461 RTE Blanche, 01170 Ségny, FRANCE<br />
+              <strong>Contact :</strong> contact@ordopro.fr
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">2. Objet du service</h2>
-            <p>
-              OrdoPro est une application de gestion destinée aux infirmiers
-              libéraux, proposant les fonctionnalités suivantes :
-            </p>
+            <h2 class="_a ni wi _i ok rl lp">2. Description du service</h2>
+            <p>Solution SaaS destinée aux infirmiers libéraux comprenant :</p>
             <ul>
-              <li>Suivi des patients</li>
-              <li>Gestion des ordonnances</li>
-              <li>Notifications des ordonnances</li>
-              <li>Communication directe avec le cabinet ou le médecin</li>
-              <li>Support client 24/7</li>
+              <li>Gestion électronique des dossiers patients</li>
+              <li>Suivi des prescriptions médicales</li>
+              <li>Outils de coordination inter-professionnelle</li>
+              <li>Service d'alertes et notifications</li>
             </ul>
 
-            <h2 class="_a ni wi _i ok rl lp">3. Conditions tarifaires</h2>
-            <p>
-              L'application OrdoPro propose un abonnement unique avec deux
-              options de paiement :
-            </p>
+            <h2 class="_a ni wi _i ok rl lp">3. Engagements du fournisseur</h2>
             <ul>
-              <li><strong>Abonnement mensuel :</strong> 9,90 € TTC par mois</li>
               <li>
-                <strong>Abonnement annuel :</strong> 118,80 € TTC par an
-                (économie de près de 20%)
+                Disponibilité du service : 99% hors maintenance programmée
+              </li>
+              <li>Support technique accessible 24h/24</li>
+              <li>Respect des normes d'hébergement des données de santé</li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">4. Conditions tarifaires</h2>
+            <p><strong>Abonnements sans engagement :</strong></p>
+            <ul>
+              <li>
+                Abonnement mensuel : 18,00 € TTC (dix-huit euros toutes taxes
+                comprises) par mois
+              </li>
+              <li>
+                Abonnement annuel : 172,00 € TTC (cent soixante-douze euros
+                toutes taxes comprises) par an
               </li>
             </ul>
-            <p>* Bénéficiez d'une déduction fiscale possible</p>
             <p>
-              Modalités de paiement : Le règlement s'effectue uniquement par
-              carte bancaire (CB) directement depuis l'interface de
-              l'application. Les paiements sont sécurisés et traités par notre
-              prestataire de services de paiement. Les cartes bancaires
-              acceptées incluent Visa, Mastercard et les cartes de paiement
-              internationales compatibles.
+              Paiement sécurisé par carte bancaire via Stripe®.<br />
+              Facturation électronique disponible sur demande.
+            </p>
+            <p>
+              Paiement sécurisé par carte bancaire via Stripe Payments Europe
+              Limited (processeur de paiement agréé CB).<br />
+              Facturation électronique disponible sur demande conformément à
+              l'article 289 du CGI.
+            </p>
+            <p>
+              Renouvellement automatique - Résiliation possible à tout moment
+              sans frais<br />
+              Aucun coût supplémentaire hormis ceux expressément mentionnés
+              ci-dessus
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">4. Modalités d'abonnement</h2>
+            <h2 class="_a ni wi _i ok rl lp">5. Droit de rétractation</h2>
             <p>
-              L'abonnement est souscriptible directement depuis l'application
-              OrdoPro. Les utilisateurs peuvent choisir entre un abonnement
-              mensuel ou annuel.
+              Conformément à l'article L221-18 du code de la consommation,<br />
+              Délai de 14 jours à compter de la souscription.<br />
+              Demande à adresser à : contact@ordopro.fr
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">
-              5. Résiliation et remboursement
-            </h2>
+            <h2 class="_a ni wi _i ok rl lp">6. Résiliation</h2>
+            <ul>
+              <li>Désabonnement à tout moment via l'interface utilisateur</li>
+              <li>Fin de service à échéance du mois en cours</li>
+              <li>
+                Conservation des données selon Politique de Confidentialité
+              </li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">7. Propriété intellectuelle</h2>
             <p>
-              La résiliation peut être effectuée à tout moment directement
-              depuis l'interface de l'application. En cas d'insatisfaction,
-              contactez notre support à contact@ordopro.fr.
+              Licence d'utilisation non-exclusive et non-transférable.<br />
+              Interdiction de reverse engineering ou réutilisation du code.
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">6. Protection des données</h2>
+            <h2 class="_a ni wi _i ok rl lp">8. Responsabilités</h2>
+            <ul>
+              <li>Exonération pour force majeure</li>
+              <li>Limitation aux montants versés sur les 12 derniers mois</li>
+              <li>Obligation de moyens renforcée</li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">9. Données personnelles</h2>
             <p>
-              OrdoPro s'engage à protéger la confidentialité des données de ses
-              utilisateurs. Consultez notre politique de confidentialité pour
-              plus de détails.
+              Traitement conforme au RGPD et à notre
+              <a href="./politique_de_confidentialite.html"
+                >Politique de Confidentialité</a
+              >.<br />
+              Hébergement des données santé en France (HDS Art. L1111-8 CSP).
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">7. Support client</h2>
+            <h2 class="_a ni wi _i ok rl lp">10. Litiges</h2>
             <p>
-              Un support client est disponible 24h/7j. Pour toute question ou
-              assistance, vous pouvez nous contacter par email à
-              contact@ordopro.fr.
+              Médiation préalable obligatoire.<br />
+              Compétence exclusive des tribunaux de Bourg-en-Bresse.
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">8. Modifications des CGV</h2>
+            <h2 class="_a ni wi _i ok rl lp">11. Évolution des CGV</h2>
             <p>
-              OrdoPro se réserve le droit de modifier ses Conditions Générales
-              de Vente. Les modifications seront publiées sur cette page avec la
-              date de mise à jour.
-            </p>
-
-            <h2 class="_a ni wi _i ok rl lp">9. Contact</h2>
-            <p>
-              Pour toute question relative aux présentes CGV, contactez-nous à :
-              contact@ordopro.fr
+              Notification par email 30 jours avant application.<br />
+              Acceptation tacite par maintien de l'abonnement.
             </p>
           </div>
         </div>
@@ -164,7 +159,7 @@
           <div class="na bc je">
             <div class="ja uc sg qm kn/3">
               <p class="za ji ki aj vm lo">
-                &copy; 2024 Ordopro. Tous droits réservés.
+                &copy; 2023 Ordopro. Tous droits réservés.
               </p>
             </div>
 
