--- a/public/politique_de_confidentialite.html
+++ b/public/politique_de_confidentialite.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Politique de confidentialité - Ordopro</title>
+    <title>Politique de Confidentialité - Ordopro</title>
     <link rel="icon" href="./images/logo_simple_centre.png" />
     <link href="css/style.css" rel="stylesheet" />
   </head>
+
   <body class="tf gk">
-    <!-- ======= Header Start ======= -->
+    <!-- ======= Header Identique aux CGV ======= -->
     <header class="navbar e g h da uc pf tf mj dk gk">
       <div class="a f dd">
         <div class="bc le oe">
@@ -24,26 +25,6 @@
               />
             </a>
           </div>
-          <button
-            class="navbarOpen e i j/2 da bc fc vc be/2 ie le ne pe ui cn"
-            aria-label="navbarOpen"
-            name="navbarOpen"
-          >
-            <span class="zb gc wc uf hk"></span>
-            <span class="zb gc wc uf hk"></span>
-            <span class="zb gc wc uf hk"></span>
-          </button>
-
-          <div class="menu-wrapper f dc oe bn">
-            <button
-              class="navbarClose d k l ea bc fc vc ie le ne ui cn"
-              name="navbarClose"
-              aria-label="navbarClose"
-            >
-              <span class="zb gc wc ce uf hk"></span>
-              <span class="ta zb gc wc de uf hk"></span>
-            </button>
-          </div>
 
           <div class="ua bc le me um">
             <a href="https://ordopro.fr/" class="dc _e vf lg ng ki vi aj qj _k">
@@ -53,130 +34,142 @@
         </div>
       </div>
     </header>
-    <!-- ======= Header End ======= -->
 
     <main class="mt-24">
       <section class="sh">
         <div class="wow fadeInUp la bb pd ji" data-wow-delay=".2s">
-          <h1 class="_a qi ui _i ok tl im lm">Politique de confidentialité</h1>
-          <p class="ki bj">Dernière mise à jour : 12/11/2024</p>
+          <h1 class="_a qi ui _i ok tl im lm">Politique de Confidentialité</h1>
+          <p class="ki bj">Dernière mise à jour : 25/10/2023</p>
 
           <div class="ki bj">
-            <h2 class="_a ni wi _i ok rl lp">1. Données que nous collectons</h2>
+            <h2 class="_a ni wi _i ok rl lp">1. Responsable du traitement</h2>
             <p>
-              Nous collectons les informations personnelles suivantes de nos
-              utilisateurs inscrits, qui sont des professionnels de santé, dans
-              le but de permettre leur identification et l'accès à notre
-              application :
-            </p>
-            <ul>
-              <li>Nom et prénom</li>
-              <li>Adresse e-mail</li>
-            </ul>
-            <p>
-              Nos utilisateurs peuvent également saisir des informations
-              relatives à leurs patients, incluant des informations de santé et
-              des ordonnances, qui sont utilisées dans un cadre strictement
-              médical et de stockage.
+              OrdoPro - Issa DIALLO<br />
+              461 RTE Blanche, 01170 Ségny, FRANCE<br />
+              contact@ordopro.fr<br />
+              SIREN : 752 631 127
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">2. Utilisation des données</h2>
-            <p>
-              Les informations personnelles de l'utilisateur (nom, prénom et
-              adresse e-mail) sont collectées pour permettre l'accès sécurisé à
-              l'application.
-            </p>
-            <p>
-              Les informations des patients et leurs ordonnances sont stockées
-              dans le but exclusif de faciliter la gestion médicale par les
-              professionnels de santé et ne sont utilisées que dans ce cadre.
-            </p>
-
-            <h2 class="_a ni wi _i ok rl lp">3. Partage des données</h2>
-            <p>
-              Nous ne partageons les données des utilisateurs ou des patients
-              avec aucun tiers. Les informations sont stockées de manière
-              sécurisée dans notre base de données. Aucun accès à des tiers
-              n'est autorisé, sauf en cas d'exigence légale.
-            </p>
-
-            <h2 class="_a ni wi _i ok rl lp">
-              4. Stockage et sécurité des données
-            </h2>
-            <p>
-              Les données sont stockées dans des bases de données sécurisées.
-              Nous nous engageons à conserver les données personnelles pour la
-              durée minimum requise par la loi en vigueur. Nous mettons en place
-              des mesures de sécurité pour limiter l'accès aux données, mais
-              nous ne disposons pas pour l'instant de mesures de chiffrement
-              spécifiques.
-            </p>
-
-            <h2 class="_a ni wi _i ok rl lp">5. Droits des utilisateurs</h2>
-            <p>
-              Conformément à la réglementation, les utilisateurs de
-              l'application OrdoPro ont les droits suivants sur leurs données
-              personnelles :
-            </p>
+            <h2 class="_a ni wi _i ok rl lp">2. Données collectées</h2>
+            <p>Catégories de données traitées :</p>
             <ul>
               <li>
-                Droit de rectification : possibilité de modifier leurs
-                informations en cas d'erreur.
+                <strong>Données professionnelles :</strong> RPPS, nom, prénom,
+                adresse professionnelle
               </li>
               <li>
-                Droit d'effacement : possibilité de demander la suppression de
-                leurs données personnelles.
+                <strong>Données techniques :</strong> adresse IP, logs, type de
+                terminal
               </li>
               <li>
-                Droit à la portabilité : possibilité d'exporter leurs données.
+                <strong>Données de paiement :</strong> cryptogramme CB (stocké
+                par notre processeur de paiement)
+              </li>
+              <li>
+                <strong>Données patients :</strong> nom, prescriptions, dates de
+                soins (en strict respect du secret médical)
               </li>
             </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">3. Finalités du traitement</h2>
+            <ul>
+              <li>Gestion des dossiers patients</li>
+              <li>Suivi des prescriptions médicales</li>
+              <li>Facturation des abonnements</li>
+              <li>Prévention des incidents techniques</li>
+              <li>Conformité aux obligations légales</li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">4. Base légale</h2>
+            <ul>
+              <li>
+                Exécution du contrat (RGPD art.6-1b) pour les fonctionnalités
+                principales
+              </li>
+              <li>Intérêt vital (RGPD art.9-2c) pour les données de santé</li>
+              <li>
+                Obligation légale (RGPD art.6-1c) pour la conservation des
+                données médicales
+              </li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">5. Durée de conservation</h2>
+            <ul>
+              <li>
+                Données comptables : 10 ans (article L123-22 du code de
+                commerce)
+              </li>
+              <li>
+                Dossiers patients : 20 ans à partir de la dernière intervention
+                (article R1112-7 du CSP)
+              </li>
+              <li>
+                Données techniques : 13 mois (loi Informatique et Libertés)
+              </li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">6. Destinataires</h2>
+            <ul>
+              <li>Personnel médical autorisé</li>
+              <li>
+                Hébergeur de données de santé agréé (Art. L. 1111-8 du CSP)
+              </li>
+              <li>Autorités sanitaires (en cas d'obligation légale)</li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">7. Sécurité</h2>
+            <p>Mesures techniques et organisationnelles :</p>
+            <ul>
+              <li>Chiffrement AES-256 des données sensibles</li>
+              <li>Authentification forte à double facteur</li>
+              <li>Sauvegardes journalières chiffrées</li>
+              <li>Audits de sécurité biannuels</li>
+            </ul>
+
+            <h2 class="_a ni wi _i ok rl lp">8. Transferts hors UE</h2>
             <p>
-              Les utilisateurs peuvent à tout moment retirer leur consentement
-              pour la collecte et l'utilisation de leurs données personnelles ou
-              demander des modifications en nous contactant à l'adresse
-              mentionnée ci-dessous.
+              Aucun transfert en dehors de l'Union Européenne n'est effectué.
+              Nos serveurs sont situés en France.
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">
-              6. Cookies et technologies de suivi
-            </h2>
+            <h2 class="_a ni wi _i ok rl lp">9. Vos droits</h2>
+            <p>Conformément au RGPD, vous pouvez :</p>
+            <ul>
+              <li>Accéder à vos données (art.15)</li>
+              <li>Demander leur correction (art.16)</li>
+              <li>Limiter leur traitement (art.18)</li>
+              <li>Vous opposer au traitement (art.21)</li>
+              <li>Demander leur portabilité (art.20)</li>
+            </ul>
             <p>
-              Nous utilisons des cookies pour améliorer l'expérience de
-              navigation des utilisateurs. Les utilisateurs ont la possibilité
-              de refuser les cookies ou de modifier leurs préférences à tout
-              moment.
+              Pour exercer vos droits : contact@ordopro.fr (réponse sous 1 mois)
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">7. Contact</h2>
+            <h2 class="_a ni wi _i ok rl lp">10. Réclamation</h2>
             <p>
-              Pour toute question concernant cette Politique de confidentialité
-              ou pour exercer vos droits relatifs à vos données personnelles,
-              vous pouvez nous contacter par e-mail à :
-              <strong>contact@ordopro.fr</strong>
+              Vous pouvez saisir la CNIL :<br />
+              3 Place de Fontenoy, 75007 Paris<br />
+              www.cnil.fr
             </p>
 
-            <h2 class="_a ni wi _i ok rl lp">
-              8. Modifications de la Politique de confidentialité
-            </h2>
+            <h2 class="_a ni wi _i ok rl lp">11. Modifications</h2>
             <p>
-              Nous nous réservons le droit de modifier cette Politique de
-              confidentialité à tout moment. Les modifications seront publiées
-              sur cette page avec la date de mise à jour.
+              Toute modification sera notifiée par email 30 jours avant son
+              entrée en vigueur.
             </p>
           </div>
         </div>
       </section>
     </main>
 
-    <!-- ======= Footer Start ======= -->
+    <!-- ======= Footer ======= -->
     <footer>
       <div class="wow fadeInUp vf rg gk" data-wow-delay=".2s">
         <div class="a hd">
           <div class="na bc je">
             <div class="ja uc sg qm kn/3">
               <p class="za ji ki aj vm lo">
-                &copy; 2024 Ordopro. Tous droits réservés.
+                &copy; 2023 Ordopro. Tous droits réservés.
               </p>
             </div>
 
@@ -198,9 +191,8 @@
         </div>
       </div>
     </footer>
-    <!-- ======= Footer End ======= -->
 
-    <!-- ======= JS Files ======= -->
+    <!-- Scripts -->
     <script src="js/scroll-menu.js"></script>
     <script defer src="js/bundle.js"></script>
   </body>
