fix: update image source paths in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
           <div class="uc qg mn/12">
             <div class="wow fadeInUp f ga la uc od uh um" data-wow-delay=".3s">
               <img
-                src="images/ordopro_home_page.png"
+                src="images/homePage.png"
                 alt="image home de l'application'"
                 class="la gd"
               />
@@ -456,7 +456,7 @@
                   data-wow-delay=".2s"
                 >
                   <img
-                    src="images/ordopro_ordonnance_list.png"
+                    src="images/ordonnanceList.png"
                     alt="image des ordonnaces du l'application'"
                     class="la gd"
                   />
