fix: update image source paths in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
             <div class="wow fadeInUp f ga la uc od uh um" data-wow-delay=".3s">
               <img
                 src="images/homePage.png"
-                alt="image home de l'application'"
+                alt="image home de l'application ordopro"
                 class="la gd"
               />
               <div class="qp e g h q ha ec uc af ag">
